fix: adapt 11.5.0 code to Java 11 (main sources)
- replace pattern matching for instanceof with explicit casts
- replace switch rules with classic switch statements
- replace records/sealed interface with plain classes (ElementNameMap,
  PotentialVariableDeclarationFunction)
- replace Stream.toList() with Collectors.toUnmodifiableList()
- restore MethodHandleUtils instead of java.lang.reflect.RecordComponent
  (not available in Java 11)
- drop the unused source/target 15 configuration (release=11 takes precedence)